--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,8 @@
       left: calc(50% - 150px);
       top: calc(50% - 40px);
     ">
-      <img src="loading.gif" style="width: 300px;"/><br>
+      <!--Loading gif when the application starts-->
+      <!--<img src="loading.gif" style="width: 300px;"/><br>-->
       <center>Loading...</center>
     </div>
     <div id="app">
